--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body >
-    <audio id="audio" src="./giangsinh.mp3"></audio>
+    <audio id="audio" src="./giangsinh.mp3" volume="0.5" autoplay></audio>
 
     <div id="as" class="christmas-message">Merry Christmas</div>
     <div class="tree-container">
@@ -33,14 +33,14 @@
             </div>
             <div class="details">
                 <h4 class="color margin">MERRY CHRISTMAS</h4>
-                <p>Giáng Sinh đến rồi.</p>
-                <p>Chúc bạn mùa lễ ấm áp và ngọt</p>
-                <p>ngào như tình bạn của chúng ta.</p>
-                <p>Cảm ơn bạn luôn bên cạnh tôi.</p>
-                <p>Hy vọng chúng ta sẽ có thêm nhiều</p>
-                <p>kỷ niệm đẹp trong năm tới.</p>
+                <p>Năm nay là năm đầu</p>
+                <p>anh làm bánh cũng như </p>
+                <p>làm web này để tặng ai đó.</p>
+                <p>Anh chúc Thảo Hiền Noel vui vẻ ha.</p>
+                <p>Anh cũng mong Thảo Hiền đỡ ngại</p>
+                <p>còn cho anh nhiều cơ hội để gặp.</p>
                 <p class="text-right">Chúc mừng Giáng Sinh!</p>
-                <p class="text-right">♥Panbap♥</p>
+                <p class="text-right">HT</p>
             </div>
         </div>
     </div>
